Fixed spacing issues in guestbook

--- a/src/App.css
+++ b/src/App.css
@@ -502,7 +502,6 @@ html {
   height: 25px;
   background: transparent;
   width: 100%;
-  padding-left: 10px;
 }
 
 #submit-form {
